--- a/platformio.ini
+++ b/platformio.ini
@@ -25,6 +25,9 @@ default_envs = tbeam
 ;default_envs = meshtastic-dr-dev
 ;default_envs = m5stack-coreink
 ;default_envs = rak4631
+;default_envs = ut2uh-r6822dh
+default_envs = ut2uh-k46v1
+;default_envs = ut2uh-k46v2
 
 extra_configs =
   arch/*/*.ini
