--- a/platformio.ini
+++ b/platformio.ini
@@ -26,7 +26,8 @@
 ;default_envs = meshtastic-dr-dev
 ;default_envs = m5stack-coreink
 ;default_envs = rak4631
-default_envs = wio-e5
+;default_envs = wio-e5
+default_envs = k46v4
 
 extra_configs =
   arch/*/*.ini
