--- a/variants/diy/platformio.ini
+++ b/variants/diy/platformio.ini
@@ -46,3 +46,38 @@ build_flags =
   -D EBYTE_E22
   -D GPS_POWER_TOGGLE
   -I variants/diy/hydra
+
+
+; UT2UH K46v4 Remote Controller
+[env:k46v4]
+extends = esp32_base
+board = esp32doit-devkit-v1
+board_level = extra
+monitor_filters = esp32_exception_decoder
+build_src_filter = 
+  ${esp32_base.build_src_filter}
+build_flags = 
+  ${esp32_base.build_flags}
+  -I variants/diy/k46v4
+  -D RADIOLIB_VERBOSE
+  -D K46V4
+  -DILI9341_DRIVER
+  -DM5STACK
+  -DUSER_SETUP_LOADED
+  -DTFT_DRIVER=0x9341
+  -DTFT_MISO=16
+  -DTFT_MOSI=2
+  -DTFT_SCLK=15
+  -DTFT_CS=17
+  -DTFT_DC=27
+  -DTFT_RST=5
+  -DTFT_BL=14
+  -DSPI_FREQUENCY=40000000
+  -DSPI_READ_FREQUENCY=16000000
+  -DDISABLE_ALL_LIBRARY_WARNINGS
+lib_ignore =
+  k46v4
+lib_deps = 
+  ${esp32_base.lib_deps}
+  lewisxhe/PCF8563_Library@^1.0.1
+  bodmer/TFT_eSPI@^2.4.76
